# docs/swagger.json
@@ -400,8 +400,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ProductID(required)",
-                        "name": "productID",
+                        "description": "Product(required)",
+                        "name": "product",
                         "in": "path",
                         "required": true
                     },
